--- a/css/index.css
+++ b/css/index.css
@@ -95,3 +95,30 @@ body {
 	text-align: center;
 	position: relative;
 }
+/*回到顶部部分*/
+#goTopDiv {
+	width: 50px;
+	height: 50px;
+	border-radius: 5px;
+	opacity:0.7;
+	filter:alpha(opacity=70);
+	-moz-opacity:0.7;
+	position: fixed;
+	_position:absolute; /*CSS_Hack解决IE6的兼容性问题*/
+	bottom: 30px;
+	right: 20px;
+	_top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||20)-(parseInt(this.currentStyle.marginBottom,10)||20)));  
+	background:#cacaca url(../images/up.png);
+	 -moz-transition: background 1s;
+    -webkit-transition: background 1s;
+    -o-transition: background 1s;
+    -ms-transition: background 1s;
+    transition: background 1s;
+}
+*html{  /*解决IE6固定定位的闪动问题*/
+background-image:url(../images/bgimg.png);  
+background-attachment:fixed;  
+}  
+#goTopDiv:hover {
+	background:#1CA1E2 url(../images/up.png);
+}
