--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,14 @@ background-attachment:fixed;
 	border-radius: 4px;
 	top: 5px;
 	left: 5px;
+	-webkit-transition:box-shadow 0.7s ease;
+	-ms-transition:box-shadow 0.7s ease;	
+	-moz-transition:box-shadow 0.7s ease;	
+	-o-transition:box-shadow 0.7s ease;	
+}
+.authorPic:hover {
+	-moz-box-shadow: 0px 0px 8px 8px #2792c3; /* 老的 Firefox */
+    box-shadow: 0px 0px 8px 8px #2792c3;
 }
 .title {
 	width: 710px;
@@ -363,4 +371,98 @@ background-attachment:fixed;
 }
 #links a:hover {
 	color: #FF0080;
+}
+/*页面跳转部分*/
+#pageSwitch {
+	width: 780px;
+	height: 50px;
+	margin-top: 15px;
+	color: #a0a0a0;
+	background-color: #272933; 
+	text-align: center;
+	line-height: 50px;
+}
+
+#pageSwitch a {
+	border-right: #909090 1px solid; 
+	padding-right: 5px; 
+	background-position: 50% bottom; 
+	border-top: #909090 1px solid; 
+	padding-left: 5px; 
+	background-image: url(bar.gif); 
+	padding-bottom: 2px; 
+	border-left: #909090 1px solid; 
+	color: #c0c0c0; 
+	margin-right: 3px; 
+	padding-top: 2px; 
+	border-bottom: #909090 1px solid; 
+	text-decoration: none
+}
+#pageSwitch a:hover {
+	border-right: #f0f0f0 1px solid; 
+	border-top: #f0f0f0 1px solid; 
+	background-image: url(invbar.gif); 
+	border-left: #f0f0f0 1px solid; 
+	color: #ffffff; 
+	border-bottom: #f0f0f0 1px solid; 
+	background-color: #404040
+}
+#pageSwitch a:active {
+	border-right: #f0f0f0 1px solid; 
+	border-top: #f0f0f0 1px solid; 
+	background-image: url(invbar.gif); 
+	border-left: #f0f0f0 1px solid; 
+	color: #ffffff; 
+	border-bottom: #f0f0f0 1px solid; 
+	background-color: #404040
+}
+#pageSwitch span.current {
+	border-right: #ffffff 1px solid; 
+	padding-right: 5px; 
+	border-top: #ffffff 1px solid; 
+	padding-left: 5px; 
+	font-weight: bold; 
+	padding-bottom: 2px; 
+	border-left: #ffffff 1px solid; 
+	color: #ffffff; 
+	margin-right: 3px; 
+	padding-top: 2px; 
+	border-bottom: #ffffff 1px solid; 
+	background-color: #606060
+}
+#pageSwitch span.disabled {
+	border-right: #606060 1px solid; 
+	padding-right: 5px; 
+	border-top: #606060 1px solid; 
+	padding-left: 5px; 
+	padding-bottom: 2px; 
+	border-left: #606060 1px solid; 
+	color: #808080; 
+	margin-right: 3px; 
+	padding-top: 2px; 
+	border-bottom: #606060 1px solid
+}
+/*版权说明部分*/
+#copyright {
+	height: 40px;
+	margin-top: 15px;
+	background: #272933;
+	position: relative;
+	border-radius: 5px 5px 0 0;
+}
+#borderBottom {
+	width: 1050px;
+	height: 4px;
+	position: absolute;
+	top: 36px;
+	background: url(../images/copyBorder.png);
+}
+#copyDesc {
+	width: 400px;
+	height: 36px;
+	line-height: 36px;
+	text-align: center;
+	position: absolute;
+	left: 325px;
+	color: #888e7e;
 }
