完成了博文内容样式和布局的设计。

--- a/css/blogPage.css
+++ b/css/blogPage.css
@@ -256,6 +256,29 @@ background-attachment:fixed;
 	width: 780px;
 	height: 1500px;
 	background:url(../images/blogContentBg.jpg);
+	position: relative;
+}
+.blogPic {
+	width: 720px;
+	padding: 10px 30px 10px 30px;
+	position: relative;
+}
+.blogPara{
+	width: 720px;
+	padding: 5px 30px 5px 30px;
+	position: relative;
+	color: #028760;
+	font-family: "微软雅黑";
+	font-size: 14px;
+	line-height: 25px;
+}
+.blogPic div {
+	width: 720px;/*此宽度亦为博文配图图片的宽度*/
+	height: 480px;/*此高度亦为博文配图图片的高度*/
+	overflow: hidden;
+	border-radius: 3px;
+	-moz-box-shadow: 0px 0px 4px 2px #595455; /* 老的 Firefox */
+    box-shadow: 0px 0px 4px 2px #595455;
 }
 /*右侧部分*/
 #homeRight {
